--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/react-input-mask": "^3.0.0",
     "@types/react-modal": "^3.10.6",
     "@types/yup": "^0.29.9",
     "@unform/core": "^2.1.3",
@@ -13,14 +14,13 @@
     "history": "^4.10.1",
     "polished": "^3.5.2",
     "react": "^16.13.1",
-    "react-currency-input": "^1.3.6",
-    "react-currency-input-field": "^2.7.0",
     "react-dom": "^16.13.1",
     "react-dropzone": "^10.2.2",
     "react-icons": "^3.11.0",
     "react-modal": "^3.12.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-toastify": "^6.1.0",
     "styled-components": "^5.1.0",
     "typescript": "~3.7.2",
     "yup": "^0.31.0"
